# git-inspector

./: .gitignore  README.md  apphosting.yaml
cloud-functions/: .env.example  .gitignore  README.md  main.py  pyproject.toml
cloud-functions/functions/: cloud.py  hello.py
cloud-functions/functions/analyzer/: gemini_analyzer.py  parser.py  prompt.py
cloud-functions/functions/clouds/: _firestore.py  aws.py  azure.py  cloud_cost.py  gcp.py  gcp_selenium.py  get_azure_price.py  get_azure_sku.py  model.py  parse_azure_price.py
cloud-functions/functions/gcp_cloud_scraper/: gcp_spider.py  gcp_spider_regions.py  scrapy.cfg
cloud-functions/functions/gcp_cloud_scraper/gcp_cloud_scraper/: items.py  middlewares.py  pipelines.py  settings.py
cloud-functions/functions/git_hit/: model.py
cloud-functions/functions/git_store/: model.py  repo.py
cloud-functions/tests/: test.sh  test_firestore.py
collectors/: README.md  pyproject.toml
collectors/clients/: _firestore.py
collectors/models/: cloud_cost.py
collectors/parsers/: __init__.py  aws.py  azure.py  gcp.py
frontend/: .env.example  .firebaserc  .gitignore  README.md  apphosting.yaml  firebase.json  firestore.rules  next.config.mjs  package-lock.json  package.json  response-sample.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: analysis-result-detail.tsx  analysis-result.old.tsx  analysis-result.tsx  cloud-cost-card.tsx  cloud-score-card.tsx  git-repo-analyzer.old.tsx  git-repo-analyzer.tsx  instance-recommend-card.tsx  language-distribution.tsx  step-1-language-distribution.old.tsx  step-1-language-distribution.tsx  step-2-resource-requirements.tsx  step-3-instance-recommendations.tsx  step-4-cloud-cost-winner.tsx  step-4-cloud-score-costs.tsx  step-5-anaylsis-details-llm-summary.tsx
frontend/app/components/ui/: chart.tsx  loading.tsx  modal.tsx  plasma.tsx  typing.tsx
frontend/app/lib/: fetch.ts  fetch_steps.ts  firebase.ts  score.ts
frontend/app/results/: page.old.tsx  page.tsx
frontend/app/results-detail/: page.old.tsx  page.tsx
frontend/app/types/: github-colors.d.ts  model.ts
frontend/components/: analysis-result.tsx  git-repo-analyzer.tsx
frontend/functions/: .env.example  .gitignore  README.md  main.py  requirements.txt
frontend/functions/functions/: cloud.py  firestore.py  git.py
frontend/functions/functions/analyzer/: calculator.py  full_analyzer.py  gemini_analyzer.py  instance_selector.py  llm.py  model.py  parser.py  pricing.py  prompt.py  repo_analyzer.py
frontend/lib/: firebase.ts
gemini-research/: .env.example  .gitignore  agent.ipynb  firestore.ipynb  gemini_result.md  git_loader.ipynb  language_ratio.ipynb  pricing.ipynb  pyproject.toml  repo_chain.ipynb
